# 24-Hour-Ahead-Photovoltaic-PV-Power-Forecasting

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  COLAB_SSH_WORKFLOW.md  LICENSE  METRICS_ANALYSIS.md  QUICKSTART_CONFIG.md  README.md  TFT_ENSEMBLE_GUIDE.md  lgbm_train.py  pyproject.toml  requirements.txt  tft_train.py  train.py
.github/workflows/: ci.yml
configs/: cnn_bilstm.yaml  default.yaml  lgbm.yaml  tft.yaml  tft_optimized.yaml
data/: README.md
data/raw/: wx_dataset.xlsx
outputs/: processed.parquet
outputs/cnn/baseline/: history.json
outputs/cnn/fusion_attention/: history.json  scalers.joblib
outputs/tft/baseline/: config_tft.json  metrics_summary.json  metrics_test_tft.json  tft-best.ckpt
outputs_baseline/cnn/: history.json  model_best.keras  predictions_val_cnn.csv  scalers.joblib
outputs_baseline/lgbm/: config_lgbm.json  feature_importance_lgbm.json  metrics_summary.json  metrics_test_lgbm.json
outputs_baseline/lgbm/models/: lgbm_h1.joblib  lgbm_h10.joblib  lgbm_h11.joblib  lgbm_h12.joblib  lgbm_h13.joblib  lgbm_h14.joblib  lgbm_h15.joblib  lgbm_h16.joblib  lgbm_h17.joblib  lgbm_h18.joblib  lgbm_h19.joblib  lgbm_h2.joblib  lgbm_h20.joblib  lgbm_h21.joblib  lgbm_h22.joblib  lgbm_h23.joblib  lgbm_h24.joblib  lgbm_h3.joblib  lgbm_h4.joblib  lgbm_h5.joblib  lgbm_h6.joblib  lgbm_h7.joblib  lgbm_h8.joblib  lgbm_h9.joblib
outputs_lag72/cnn/: history.json  model_best.keras  scalers.joblib
outputs_lag72/lgbm/: config_lgbm.json  feature_importance_lgbm.json  metrics_summary.json  metrics_test_lgbm.json
outputs_lag72/lgbm/models/: lgbm_h1.joblib  lgbm_h10.joblib  lgbm_h11.joblib  lgbm_h12.joblib  lgbm_h13.joblib  lgbm_h14.joblib  lgbm_h15.joblib  lgbm_h16.joblib  lgbm_h17.joblib  lgbm_h18.joblib  lgbm_h19.joblib  lgbm_h2.joblib  lgbm_h20.joblib  lgbm_h21.joblib  lgbm_h22.joblib  lgbm_h23.joblib  lgbm_h24.joblib  lgbm_h3.joblib  lgbm_h4.joblib  lgbm_h5.joblib  lgbm_h6.joblib  lgbm_h7.joblib  lgbm_h8.joblib  lgbm_h9.joblib
pv_forecasting/: __init__.py  cli.py  config.py  data.py  ensemble_model.py  features.py  logger.py  metrics.py  model.py  pipeline.py  timeutils.py  window.py
pv_forecasting/inference/: __init__.py  predict.py
pv_forecasting/models/: __init__.py  cnn_bilstm.py  cnn_bilstm_fusion_attention.py
pv_forecasting/training/: __init__.py  train_cnn.py  train_lgbm.py  train_tft.py
scripts/: README.md  check_merged.py  ensemble.py  merge_datasets.py  preprocess_data.py  verify_merge.py
scripts/data/: preprocess_data.py
scripts/evaluation/: ensemble.py  run_ensemble.sh  test_ensemble.py
scripts/inference/: predict.py
scripts/postprocessing/: analyze_errors.py
scripts/preprocessing/: generate_processed_lag72.py
scripts/training/: run_tft_grid_search.sh  tft_grid_search.py  tft_parallel_grid_search.py  tft_quick_grid_search.py  train_cnn.sh  train_cnn_baseline.sh  train_cnn_bilstm.py  train_cnn_lag72.sh  train_lgbm.py  train_lgbm.sh  train_lgbm_baseline.sh  train_lgbm_lag72.sh  train_tft.py  train_tft.sh  train_tft_baseline.sh  train_tft_lag72.sh
scripts/utils/: monitor_search.sh  reorganize_outputs.sh
tests/: __init__.py  conftest.py  test_data.py  test_features.py  test_metrics.py  test_pipeline.py
training_scripts/: README.md  predict.py  train_cnn_bilstm.py  train_lgbm.py  train_tft.py
